Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,11 +204,11 @@
        "data": [
         {
          "type": "bar",
-         "uid": "ee37c194-bfe6-11ea-9aa6-616edaca8f43",
+         "uid": "f6511588-bfe6-11ea-9aa6-616edaca8f43",
          "x": [
-          "jack",
-          "jill",
-          "sandy"
+          "Jack",
+          "Jill",
+          "Sandy"
          ],
          "y": [
           8,
@@ -220,10 +220,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"07b25162-b90b-4ab8-96c9-03f416e11876\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"07b25162-b90b-4ab8-96c9-03f416e11876\", [{\"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"ee50536c-bfe6-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\", [{\"x\": [\"Jack\", \"Jill\", \"Sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"f653cd1e-bfe6-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"07b25162-b90b-4ab8-96c9-03f416e11876\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"07b25162-b90b-4ab8-96c9-03f416e11876\", [{\"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"ee50536c-bfe6-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\", [{\"x\": [\"Jack\", \"Jill\", \"Sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"f653cd1e-bfe6-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
