Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "trace0 = {'type': 'bar', 'x': ['Jack', 'Jill', 'Sandy'], 'y': [8, 11, 10]}\n",
+    "trace0 = {'type': 'line', 'x': ['Jack', 'Jill', 'Sandy'], 'y': [8, 11, 10]}\n",
     "\n",
     "\n",
     "plotly.offline.iplot([trace0])"
