Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +203,8 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "type": "bar",
-         "uid": "f6511588-bfe6-11ea-9aa6-616edaca8f43",
+         "type": "scatter",
+         "uid": "b38cd858-bfe7-11ea-9aa6-616edaca8f43",
          "x": [
           "Jack",
           "Jill",
@@ -220,10 +220,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\", [{\"x\": [\"Jack\", \"Jill\", \"Sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"f653cd1e-bfe6-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0fc96a07-361e-4fac-a885-d8483395c905\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0fc96a07-361e-4fac-a885-d8483395c905\", [{\"x\": [\"Jack\", \"Jill\", \"Sandy\"], \"y\": [8, 11, 10], \"type\": \"scatter\", \"uid\": \"b38f84ae-bfe7-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f381e4af-e2f9-4d64-a11e-c9718e8dee67\", [{\"x\": [\"Jack\", \"Jill\", \"Sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"f653cd1e-bfe6-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0fc96a07-361e-4fac-a885-d8483395c905\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0fc96a07-361e-4fac-a885-d8483395c905\", [{\"x\": [\"Jack\", \"Jill\", \"Sandy\"], \"y\": [8, 11, 10], \"type\": \"scatter\", \"uid\": \"b38f84ae-bfe7-11ea-9aa6-616edaca8f43\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "trace0 = {'type': 'line', 'x': ['Jack', 'Jill', 'Sandy'], 'y': [8, 11, 10]}\n",
+    "trace0 = {'type': 'scatter', 'x': ['Jack', 'Jill', 'Sandy'], 'y': [8, 11, 10]}\n",
     "\n",
     "\n",
     "plotly.offline.iplot([trace0])"
